--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -43,6 +43,21 @@ colores{
     /* ROJO */
     color: #d03830;
 
+    /* cards coloridos */
+        background-color: #3aaa35;
+
+        background-color: #f4c000;
+
+        background-color: #f07e07;
+
+        background-color: #ce1537 ;
+
+        background-color: #662483 ;
+
+        background-color: #004f9f ;
+
+
+
   }
 
 
@@ -384,6 +399,13 @@ h6 {
   visibility: visible;
 }
 
+.navbar .pronostico{
+    background-color: rgba(0, 0, 0, 0.3);
+    border-radius: 5px;
+    padding: 0px 16px 0px 16px;
+}
+
+
 @media (max-width: 1366px) {
   .navbar .dropdown .dropdown ul {
     left: -90%;
@@ -393,6 +415,7 @@ h6 {
     left: -100%;
   }
 }
+
 
 /**
 * Mobile Navigation
@@ -506,21 +529,27 @@ h6 {
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: 100vh;
-   background: url("../img/muni-sm/banderas-sm.jpg") top center;
-  /* background: url("../video/TresArroyos.mp4") top center; */
+  height: 600px;
+   /*background: url("../img/muni-sm/banderas-sm.jpg") top center;*/
+   /* background: url("../img/video/Descubriendo.mp4") top center; */
   background-size: cover;
   position: relative;
+  top: 0 !important;
+}
+
+#hero #video{
+    position: absolute;
+    z-index: 0;
+    width: 100%;
 }
 
 .video-portada{
-  position: relative;
-  z-index: 2;
+
 }
 
 #hero:before {
   content: "";
-  background: rgba(0, 0, 0, 0.6);
+  /* background: rgba(0, 0, 0, 0.3); */
   position: absolute;
   bottom: 0;
   top: 0;
@@ -532,6 +561,13 @@ h6 {
   position: relative;
   /* padding-top: 74px; */
   text-align: center;
+  margin-top: 152px; /*cards con fondo*/
+}
+
+#hero .row>*{
+
+    padding-left: 0px;
+    padding-right: 0px;
 }
 
 #hero h1 {
@@ -539,6 +575,7 @@ h6 {
   font-size: 56px;
   font-weight: 700;
   line-height: 64px;
+  /* color: #ffc451; */
   color: #fff;
   font-family: "Poppins", sans-serif;
 }
@@ -551,27 +588,88 @@ h6 {
   color: rgba(255, 255, 255, 0.9);
   margin: 10px 0 0 0;
   font-size: 24px;
+  margin-bottom: 100px;
 }
 
-#hero .icon-box {
-  padding: 30px 20px;
+/* #hero .icon-box {
+  padding: 20px 5px;
   transition: ease-in-out 0.3s;
   border: 1px solid rgba(255, 255, 255, 0.3);
+  border-bottom: none;
   height: 100%;
   text-align: center;
-}
+} */
 
 #hero .icon-box i {
   font-size: 32px;
   line-height: 1;
+}
+
+/* ---------------  CARDS CON FONDO DE COLORES  -------------------- */
+
+#hero .icon-box {
+    padding: 20px 5px;
+    transition: ease-in-out 0.3s;
+    border: 1px solid rgba(255, 255, 255, 0);
+    /* border-bottom: none; */
+    height: 100%;
+    text-align: center;
+}
+
+#hero .icon-box:hover{
+       border: 1px solid rgba(255, 255, 255, 0.3);
+     border-bottom: none;
+}
+
+#hero .icon-box{
+    color: #f5f5f5;
+}
+#hero .icon-1{
+    background-color: #3aaa35;
+    color: #ffffff;
+}
+
+#hero .icon-1:hover{
+    background-color: #53c04d;
 
 }
 
-#hero .icon-1 i {
+#hero .icon-2 {
+    background-color: #f4c000;
+}
+
+#hero .icon-3 {
+    background-color: #f07e07;
+}
+
+#hero .icon-4 {
+    background-color: #ce1537 ;
+}
+
+#hero .icon-5 {
+    background-color: #662483 ;
+}
+
+#hero .icon-6 {
+    background-color: #004f9f ;
+}
+
+#hero .icon-box h3 {
+    font-weight: 100;
+    margin: 10px 0 0 0;
+    padding: 0;
+    line-height: 1;
+    font-size: 16px;
+    line-height: 26px;
+  }
+
+/* ----------------------  CARDS SIN FONDO  ----------------------- */
+
+/* #hero .icon-1 i, #hero .icon-1 a{
   color: #ffc451;
-}
+} */
 
-#hero .icon-2 i {
+/* #hero .icon-2 i {
   color: #3dab24;
 }
 
@@ -581,22 +679,22 @@ h6 {
 
 #hero .icon-4 i {
   color: rgb(13, 116, 189);
-}
+} */
 
-#hero .icon-box h3 {
+/* #hero .icon-box h3 {
   font-weight: 700;
   margin: 10px 0 0 0;
   padding: 0;
   line-height: 1;
   font-size: 20px;
   line-height: 26px;
-}
+} */
 
-#hero .icon-box h3 a {
+ #hero .icon-box h3 a {
   color: #fff;
   transition: ease-in-out 0.3s;
 }
-
+/*
 #hero .icon-box h3 a:hover {
   color: #ffc451;
 }
@@ -627,7 +725,7 @@ h6 {
 
 #hero .icon-4:hover {
   border-color: rgb(13, 116, 189);
-}
+} */
 
 @media (min-width: 1024px) {
   #hero {
@@ -648,6 +746,10 @@ h6 {
   #hero h2 {
     font-size: 20px;
     line-height: 24px;
+  }
+
+  .menu-home{
+    display:none;
   }
 }
 
