--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -817,7 +817,6 @@ section {
   font-size: 14px;
   font-weight: 500;
   padding: 0;
-  line-height: 1px;
   margin: 0 0 5px 0;
   letter-spacing: 2px;
   text-transform: uppercase;
@@ -1695,6 +1694,8 @@ section {
 /*--------------------------------------------------------------
 # MUSEOS (reutilizo estilo Team)
 --------------------------------------------------------------*/
+
+
 #museo .member-img img{
     width: 100%;
     height: 40%;
@@ -1704,11 +1705,17 @@ section {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0px 70px 50px 70px;
+    padding: 0px 0px 50px 0px;
 }
 
 .mapa iframe{
     width: 100%;
+}
+
+#museo .videos{
+    background-color: #f8f8f8;
+
+    padding-bottom: 100px!important;
 }
 
 /*--------------------------------------------------------------
@@ -1967,12 +1974,12 @@ section #cultura-eventos {
 #footer {
   background: black;
   padding: 0 0 30px 0;
-  color: #fff;
+  color: #010101;
   font-size: 14px;
 }
 
 #footer .footer-top {
-  background: rgb(13, 116, 189);
+  background: whitesmoke;
   border-bottom: 1px solid #222222;
   padding: 60px 0 30px 0;
 }
@@ -1999,7 +2006,7 @@ section #cultura-eventos {
   line-height: 24px;
   margin-bottom: 0;
   font-family: "Raleway", sans-serif;
-  color: #fff;
+  color: #010101;
 }
 
 #footer .footer-top .social-links a {
@@ -2026,7 +2033,7 @@ section #cultura-eventos {
 #footer .footer-top h4 {
   font-size: 16px;
   font-weight: 600;
-  color: #fff;
+  color: #010101;
   position: relative;
   padding-bottom: 12px;
 }
@@ -2059,7 +2066,7 @@ section #cultura-eventos {
 }
 
 #footer .footer-top .footer-links ul a {
-  color: #fff;
+  color: #010101;
   transition: 0.3s;
   display: inline-block;
   line-height: 1;
@@ -2078,7 +2085,7 @@ section #cultura-eventos {
 }
 
 #footer .footer-top .footer-newsletter form input[type=email] {
-  border: 0;
+  /* border: 0; */
   padding: 4px;
   width: calc(100% - 110px);
 }
@@ -2360,6 +2367,16 @@ input[type=number] { -moz-appearance:textfield; }
     height: 10px;
 }
 
+.container-border .border-4{
+    background-color: #53c04d;
+    height: 10px;
+}
+
+.container-border .border-6{
+    background-color: #2464a3;
+    height: 10px;
+}
+
 
 /*--------------------------------------------------------------
 # MUNICIPIO / TRES ARROYOS
@@ -2390,5 +2407,64 @@ input[type=number] { -moz-appearance:textfield; }
     display: flex !important;
     justify-content: center;
 }
+
+
+/*--------------------------------------------------------------
+# prueba background animado
+--------------------------------------------------------------*/
+bg-animated{
+    position: relative;
+    width: 100%;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
+.bg {
+    animation: slide 7s ease-in-out infinite alternate;
+    background-image: linear-gradient(-60deg, white 50%, #ccc 50%);
+    bottom: 0;
+    left: -50%;
+    opacity: .4;
+    position: fixed;
+    right: -50%;
+    top: 0;
+    z-index: -1;
+}
+
+.bg-2 {
+    animation-direction: alternate-reverse;
+    animation-duration: 10s;
+}
+
+.bg-3 {
+    animation-duration: 12s;
+}
+
+@keyframes slide{
+    0% {
+        transform: translateX(-25%);
+    }
+    100% {
+        transform: translateX(25%);
+    }
+}
+
+/* HTML:
+
+<div class="col-lg-12 bg-animated">
+<div class="bg"></div>
+<div class="bg bg-2"></div>
+<div class="bg bg-3"></div>
+<div class="row align-items-center">
+    <div class="col-6 justify-content-center">
+        <p>lalalalala </p>
+        <p>lalalalala </p>
+        <p>lalalalala </p>
+        <p>lalalalala </p>
+    </div>
+</div>
+</div> */
+
 
 
